# plugnplai

./: .gitbook.yaml  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SUMMARY.md  get_category_names  get_openapi_spec  get_openapi_url  get_plugin_manifest  get_plugins  openapi3_0.json  parse_llm_response  plugins_functions.ipynb  pyproject.toml  spec_from_url
doc/: Makefile  index.rst  requirements.txt
doc/examples/: plugin_retriever_with_langchain_agent.ipynb
doc/get-started/: quickstart.md
doc/modules/: utility-functions.md
docs/: .readthedocs.yaml  README.md  SUMMARY.md  conf.py  index.rst  requirements.txt
docs/api/: api-reference.md
docs/examples/: Plugin_Retriever_with_LangChain_Agent.ipynb  Plugin_Retriever_with_LangChain_Agent_one_line.ipynb  apply_plugins_three_steps.ipynb  create_prompt_plugins.ipynb  (+6 more)
examples/: apply_plugins_three_steps.ipynb  apply_plugins_two_lines.ipynb  create_prompt_plugins.ipynb  langchain_chatgpt_example.ipynb  langchain_example_1.ipynb  new_plugins_step_by_step.ipynb  old_gpt4_plugins_step_by_step.ipynb  plugin_retriever_with_langchain_agent.ipynb  plugins_functions.ipynb  plugins_step_by_step.ipynb  retrieve_plugins_api.ipynb  retrieve_plugins_for_langchain_agent.ipynb
get-started/: overview.md  quickstart.md
plugnplai/: __init__.py  add_plugins.py  api_call.py  call_api.py  embeddings.py  embedings.py  load.py  load_plugin.py  plugin.py  plugins.json  plugins.py  prompt.py  prompt_templates.py  utils.py
tests/: test_embeddings.py  test_plugins.py
verify_plugins/: verify_langchain.py
(+20 files in other folders)
