[tool.poetry]
name = "plugnplai"
version = "0.0.18a5"
description = "Connect plugins to AI"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pyyaml = "^6.0"
pydantic = "^1.10.7"
jsonref = "^1.1.0"
langchain = "^0.0.160"
tiktoken = "^0.3.3"
faiss-cpu = "^1.7.4"
openai = "^0.27.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"